# wait-for-it-mongo

./: .envrc.template  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml
scripts/: build.sh  publish.sh
src/wait_for_it_mongo/: __main__.py
