[tool.poetry]
name = "wait-for-it-mongo"
version = "1.0.4"
description = "Wait for a mongodb resource to become available"
authors = ["John Andrews <johnandrews@macvanderlay.lan>"]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}
typer = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wait-for-it-mongo = 'wait_for_it_mongo.__main__:run'
